# precisionflow-connect

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
configs/: cluster_12rank.json  cluster_6rank.json  docker_2node_gloo.json  multinode_2x4.json
docker/: Dockerfile  compose.2node.gloo.yml  compose.gpu-template.yml
examples/: failure_report.json  minimal_ddp_train.py
scripts/: dry_run.ps1  dry_run.sh
src/precisionflow_lab/: __init__.py  cli.py  configure.py  diagnose.py  environment.py  framework.py  launcher.py  models.py  planner.py  profile.py  py.typed  report.py  runtime.py  selftest.py
tests/: test_cli.py  test_configure.py  test_diagnose.py  test_environment.py  test_framework.py  test_launcher.py  test_planner.py  test_profile.py  test_runtime.py  test_selftest.py
