[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "precisionflow-connect"
version = "0.2.0"
description = "Multi-node connectivity and heterogeneous precision probing for distributed AI training systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1"]

[project.scripts]
precisionflow-connect = "precisionflow_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
precisionflow_lab = ["py.typed"]
